Implementados módulos de prueba

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,24 @@
-<p>layout works!</p>
+<ul>
+  <li>
+    <a routerLink="home" [routerLinkActive]="'active'" href="#">
+      Home
+    </a>
+  </li>
+  <li>
+    <a routerLink="one" [routerLinkActive]="'active'" href="#">
+      One
+    </a>
+  </li>
+  <li>
+    <a routerLink="two" [routerLinkActive]="'active'" href="#">
+      Two
+    </a>
+  </li>
+  <li>
+    <a routerLink="three" [routerLinkActive]="'active'" href="#">
+      Three
+    </a>
+  </li>
+</ul>
 
 <router-outlet></router-outlet>
